%%{init: {'theme': 'base', 'themeVariables': {'fontSize': '11px', 'nodeBorder': '1px', 'nodeRadius': '4px'}}}%%
classDiagram

    class Restaurante {
        +int id
        +string nombre
        +string direccion
        +string tipoCocina
        +int capacidadMaxima
        +string horarioApertura
        +string horarioCierre
        +float latitud
        +float longitud
        +string telefono
        +string email
        +string contrasenaHash
        +generarQR()
        +actualizarDatos()
    }

    class Cliente {
        +int id         
        +string nombre
        +string email
        +string contrasenaHash
        +string telefono
        +registrarVisita()
        +dejarValoracion()
    }

    class Visita {
        +int id
        +datetime timestampEntrada
        +datetime timestampSalida
        +int duracionMinutos
        +string estado
        +int acompanantes
        +calcularDuracion()
    }

    class CodigoQR {
        +string uuid
        +int idMesa
        +bool activo
        +datetime fechaCreacion
        +datetime fechaExpiracion
        +validarQR()
    }

    class Valoracion {
        +int id
        +int puntuacion
        +string comentario
        +datetime timestamp
    }

    class Administrador {
        +int id
        +string nombre
        +string email
        +string contrasenaHash
        +string rol
        +gestionarRestaurantes()
    }

    Restaurante "1" --> "N" CodigoQR : genera
    Restaurante "1" --> "N" Visita : registra
    Restaurante "1" --> "N" Valoracion : recibe
    Cliente "1" --> "N" Visita : realiza
    Cliente "1" --> "N" Valoracion : escribe
    Visita "N" --> "1" CodigoQR : usa
    Administrador "1" --> "N" Restaurante : gestiona